Anonymous | Login | 2021-01-18 08:03 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030681 | Open CASCADE | [OCCT] OCCT:Configuration | public | 2019-04-29 16:04 | 2020-10-12 22:59 | ||||
Reporter | kgv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Mac | OS | OS | OS Version | X | ||||
Product Version | [OCCT] 7.3.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030681: Configuration - suppress OpenGL deprecation warning on macOS 10.14 | ||||||||
Description | macOS 10.14 SDK deprecates OpenGL framework. It is desired suppressing this useless warning. /occt.git/src/OpenGl/OpenGl_GlCore11.hxx:1323:7: warning: 'glVertexPointer' is deprecated: first deprecated in macOS 10.14 - OpenGL API deprecated. (Define GL_SILENCE_DEPRECATION to silence these warnings) [-Wdeprecated-declarations] ::glVertexPointer (theSize, theType, theStride, thePtr); | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | |||||||||
![]() |
|||||||||||||||||||
|
![]() |
|
(0084053) git (administrator) 2019-04-29 18:50 |
Branch CR30681 has been created by kgv. SHA-1: 0bf52a2fd0a20a7f7f9f9762cf4668854faef898 Detailed log of new commits: Author: kgv Date: Mon Apr 29 18:43:14 2019 +0300 0030681: Configuration - suppress OpenGL deprecation warning on macOS 10.14 Define GL_SILENCE_DEPRECATION to suppress warnings. |
(0084059) git (administrator) 2019-04-29 22:44 |
Branch CR30681 has been updated forcibly by kgv. SHA-1: 25aa4cfeb9af2a92a41b6c486235f53e4dbbe88d |
(0084060) kgv (developer) 2019-04-29 22:47 |
Please raise the patch. |
(0084112) bugmaster (administrator) 2019-05-03 14:12 |
Fix has been tested in framework of IR-WEEK11 Combination - OCCT branch : IR-WEEK18 master SHA - 3763c29ce9e86f83c07d1c23686fb0b18d196a0c d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : IR-WEEK18 SHA - 1a628209b9c324a27a921de8fbbaed1c570690f9 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16301.729999999947 / 16286.290000000015 [+0.09%] Products Total CPU difference: 10545.670000000056 / 10492.700000000066 [+0.50%] Windows-64-VC14: OCCT Total CPU difference: 17665.8125 / 17645.203125 [+0.12%] Products Total CPU difference: 12087.78125 / 12107.4375 [-0.16%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0084251) git (administrator) 2019-05-08 13:42 |
Branch CR30681 has been deleted by inv. SHA-1: 25aa4cfeb9af2a92a41b6c486235f53e4dbbe88d |
![]() |
|||
occt: master 42451ec0
Timestamp: 2019-04-29 15:43:14 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0030681: Configuration - suppress OpenGL deprecation warning on macOS 10.14 Define GL_SILENCE_DEPRECATION to suppress warnings. |
||
mod - src/OpenGl/OpenGl_Context_1.mm | [ Diff ] [ File ] | ||
mod - src/OpenGl/OpenGl_GlFunctions.hxx | [ Diff ] [ File ] | ||
mod - src/OpenGl/OpenGl_Window_1.mm | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-04-29 16:04 | kgv | New Issue | |
2019-04-29 16:04 | kgv | Assigned To | => kgv |
2019-04-29 16:13 | kgv | Product Version | 7.4.0 => 7.3.0 |
2019-04-29 18:50 | git | Note Added: 0084053 | |
2019-04-29 19:17 | kgv | Relationship added | related to 0030683 |
2019-04-29 22:44 | git | Note Added: 0084059 | |
2019-04-29 22:47 | kgv | Note Added: 0084060 | |
2019-04-29 22:47 | kgv | Assigned To | kgv => bugmaster |
2019-04-29 22:47 | kgv | Status | new => resolved |
2019-04-29 22:47 | kgv | Status | resolved => reviewed |
2019-05-03 14:12 | bugmaster | Note Added: 0084112 | |
2019-05-03 14:12 | bugmaster | Status | reviewed => tested |
2019-05-06 10:44 | bugmaster | Test case number | => Not required |
2019-05-08 12:38 | bugmaster | Changeset attached | => occt master 42451ec0 |
2019-05-08 12:38 | bugmaster | Status | tested => verified |
2019-05-08 12:38 | bugmaster | Resolution | open => fixed |
2019-05-08 13:42 | git | Note Added: 0084251 | |
2019-10-02 07:05 | kgv | Relationship added | related to 0031021 |
2020-10-12 22:59 | kgv | Relationship added | related to 0031843 |
Copyright © 2000 - 2021 MantisBT Team |