0030681: Configuration - suppress OpenGL deprecation warning on macOS 10.14

Define GL_SILENCE_DEPRECATION to suppress warnings.